<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/item_marker_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <TextView
                android:id="@+id/item_marker_lat_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_8dp"
                android:text="@string/marker_lat_title"
                app:layout_constraintEnd_toStartOf="@+id/item_marker_guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/item_marker_lat_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/item_marker_lat_title"
                app:layout_constraintStart_toStartOf="@+id/item_marker_lat_title"
                app:layout_constraintTop_toBottomOf="@+id/item_marker_lat_title"
                tools:text="12345" />

            <TextView
                android:id="@+id/item_marker_lon_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_8dp"
                android:text="@string/marker_lon_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/item_marker_guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/item_marker_lon_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_8dp"
                app:layout_constraintEnd_toEndOf="@+id/item_marker_lon_title"
                app:layout_constraintStart_toStartOf="@+id/item_marker_lon_title"
                app:layout_constraintTop_toBottomOf="@+id/item_marker_lon_title"
                tools:text="12345" />

            <TextView
                android:id="@+id/item_marker_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_8dp"
                android:text="@string/marker_name_title"
                app:layout_constraintEnd_toStartOf="@+id/item_marker_guideline"
                app:layout_constraintTop_toBottomOf="@+id/item_marker_lat_value" />

            <TextView
                android:id="@+id/item_marker_name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/item_marker_name_title"
                app:layout_constraintStart_toStartOf="@+id/item_marker_guideline"
                app:layout_constraintTop_toTopOf="@+id/item_marker_name_title"
                tools:text="name" />

            <TextView
                android:id="@+id/item_marker_description_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_8dp"
                android:text="@string/marker_description_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_marker_name_title" />

            <TextView
                android:id="@+id/item_marker_description_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_marker_description_title"
                tools:text="description" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</FrameLayout>
